reference/wasmer.h

typedef enum wasi_version_t {
#if defined(WASMER_WASI_ENABLED)
  INVALID_VERSION = -1,
#endif
#if defined(WASMER_WASI_ENABLED)
  LATEST = 0,
#endif
#if defined(WASMER_WASI_ENABLED)
  SNAPSHOT0 = 1,
#endif
#if defined(WASMER_WASI_ENABLED)
  SNAPSHOT1 = 2,
#endif
#if defined(WASMER_WASI_ENABLED)
  WASIX32V1 = 3,
#endif
#if defined(WASMER_WASI_ENABLED)
  WASIX64V1 = 4,
#endif
} wasi_version_t;
typedef struct wasi_config_t wasi_config_t;
typedef struct wasi_env_t wasi_env_t;
void wasi_config_arg(struct wasi_config_t *config, const char *arg);
void wasi_config_capture_stderr(struct wasi_config_t *config);
void wasi_config_capture_stdout(struct wasi_config_t *config);
void wasi_config_env(struct wasi_config_t *config, const char *key, const char *value);
void wasi_config_inherit_stderr(struct wasi_config_t *config);
void wasi_config_inherit_stdin(struct wasi_config_t *config);
void wasi_config_inherit_stdout(struct wasi_config_t *config);
bool wasi_config_mapdir(struct wasi_config_t *config, const char *alias, const char *dir);
struct wasi_config_t *wasi_config_new(const char *program_name);
bool wasi_config_preopen_dir(struct wasi_config_t *config, const char *dir);
void wasi_env_delete(struct wasi_env_t *state);
bool wasi_env_initialize_instance(struct wasi_env_t *wasi_env,
                                  wasm_store_t *store,
                                  wasm_instance_t *instance);
struct wasi_env_t *wasi_env_new(wasm_store_t *store, struct wasi_config_t *config);
intptr_t wasi_env_read_stderr(struct wasi_env_t *env, char *buffer, uintptr_t buffer_len);
intptr_t wasi_env_read_stdout(struct wasi_env_t *env, char *buffer, uintptr_t buffer_len);
bool wasi_get_imports(const wasm_store_t *_store,
                      struct wasi_env_t *wasi_env,
                      const wasm_module_t *module,
                      wasm_extern_vec_t *imports);
wasm_func_t *wasi_get_start_function(wasm_instance_t *instance);
enum wasi_version_t wasi_get_wasi_version(const wasm_module_t *module);